# nanomesh-rust

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: workflow.yml
cdt/: Cargo.toml
cdt/src/: lib.rs
macros/: Cargo.toml  lib.rs
macros/src/: lib.rs  macros.rs
main/: Cargo.toml
main/io/: obj.rs
main/mesh/: unsafe_mesh.rs
main/render/: mod.rs
main/samples/: decimate.rs
main/scene/: mod.rs  scene.rs
main/src/: lib.rs
main/src/base/: box3.rs  dvec3.rs  mod.rs  symmetric_matrix.rs  u32vec3.rs  vector3.rs
main/src/io/: mod.rs  obj.rs  stl.rs  svg.rs
main/src/mesh/: builders.rs  connected_mesh.rs  group.rs  mod.rs  shared_mesh.rs  unsafe_mesh.rs
main/src/mesh/decimate/: collapse_context.rs  decimate.rs  edge.rs
main/src/render/: renderer.rs
main/src/render/shaders/: shader.wgsl
main/src/scene/: mod.rs  scene.rs  tobject.rs
main/src/utils/: mod.rs
nanoestimator/: Cargo.toml  README.MD
nanoestimator/src/: main.rs
nanomesh/: Cargo.toml
nanomesh/src/base/: symmetric_matrix.rs
nanomesh/src/mesh/: builders.rs  connected_mesh.rs
nanomesh/src/mesh/decimate/: decimate.rs
nanoview/: Cargo.toml
nanoview/src/: camera.rs  lib.rs  light.rs  obj.rs
nanoview/src/mesh/: material.rs  mesh.rs  mesh_part.rs  mesh_pipeline.rs
nanoview2/: Cargo.toml
nanoview2/samples/: demo.rs
nanoview2/shaders/: shader.wgsl
nanoview2/src/: lib.rs  renderer.rs  scene.rs
nanoview2/src/objects/: mesh.rs  mod.rs  scene_object.rs
pkg/: nanolabo_wasm.d.ts  nanolabo_wasm.js  nanolabo_wasm_bg.wasm  nanolabo_wasm_bg.wasm.d.ts  package.json
pkg/snippets/nanolabo_wasm-ecfa54b1fdfa34af/: callbacks.js
samples/: decimate.rs
src/: lib.rs  main.rs
src/base/: box3.rs  mod.rs  symmetric_matrix.rs  vector3.rs
src/data/: connected_mesh.rs  mod.rs  vector3.rs
src/io/: mod.rs  obj.rs
src/mesh/: builders.rs  connected_mesh.rs  mod.rs  shared_mesh.rs  unsafe_mesh.rs
src/mesh/decimate/: collapse_context.rs  decimate.rs  edge.rs  edge_hasher.rs  error.rs
src/scene/: mod.rs  scene.rs
src/scene/objects/: camera.rs
src/utils/: macros.rs  mod.rs  simple_hasher.rs  unsafe.rs
step/src/: step_file.rs
triangulate/: Cargo.toml
triangulate/examples/: step_to_obj.rs  step_to_stl.rs
triangulate/models/: bezier-sketch-extruded.step  cylinder-with-holes.step  klein-bottle.step  open-nurb-1.step  open-nurb-2.step  sphere.step  surface.step  weird-tube.step
triangulate/src/: lib.rs  mesh.rs  surface.rs  triangulate.rs
wasm/: Cargo.toml  callbacks.js  index.html  nanolabo.js  particles.json  style.css
wasm/src/: lib.rs
wasm/www/: index.html  nanolabo_wasm.d.ts  nanolabo_wasm.js  nanolabo_wasm_bg.wasm  nanolabo_wasm_bg.wasm.d.ts
