[package]
name = "nanomesh"
version = "0.1.0"
authors = ["Olivier Giniaux <oginiaux@gmail.com>"]
edition = "2018"

[lib]
name = "nanomesh"
path = "src/lib.rs"

[features]
interop = []

# [[example]]
# name = "decimate"
# path = "samples/decimate.rs"

[dependencies]
nanomesh_macros = { path = "../macros" }
nalgebra-glm = "0.13.0"
assert_approx_eq = "1.1.0"
libc = "0.2.102"
hashbrown = "0.3"
indexmap = "1.7.0"
linked_hash_set = "0.1.4"
priority-queue = "1.2.0"
pool = "0.1.3"
slotmap = "0.4.0"
getset = "0.1.2"
syn = "1.0"
quote = "1.0"
# render
# wgpu = { version = "0.12", features = ["spirv", "webgl"] }
# tobj = "2"
# image = "0.23.4"
# bytemuck = { version = "1.4", features = [ "derive" ] }
# cgmath = "0.18"
# futures = "0.3"
# ultraviolet = "0.8.1"
# mikktspace = "0.2.0"
# gltf = "0.15.2"