[package]
name = "nanomesh"
version = "0.1.0"
authors = ["Olivier Giniaux <oginiaux@gmail.com>"]
edition = "2018"

[lib]
name = "nanomesh"
path = "src/lib.rs"

[[example]]
name = "decimate"
path = "samples/decimate.rs"

[dependencies]
assert_approx_eq = "1.1.0"
libc = "0.2.102"
hashbrown = "0.3"
indexmap = "1.7.0"
linked_hash_set = "0.1.4"
priority-queue = "1.2.0"
pool = "0.1.3"