[package]
name = "nanolabo_wasm"
version = "0.1.0"
authors = ["Olivier Giniaux <oginiaux@gmail.com>"]
edition = "2018"

[lib]
name = "nanolabo_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
step = { path = "../step", default-features = false }
triangulate = { path = "../triangulate", default-features = false, features = [] }
nanomesh = { path = "../main" }
wasm-bindgen = "0.2.80"
console_error_panic_hook = "0.1.7"